Fix unclickable (due to z-index) events

--- a/src/app/home/sections/charts/chart-1-2/chart-1-2.component.scss
+++ b/src/app/home/sections/charts/chart-1-2/chart-1-2.component.scss
@@ -11,7 +11,6 @@
         .events {
             width: 100%;
             overflow: hidden;
-            z-index: -1;
             position: absolute;
             height: $events-height;
             bottom: 0;
